--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,11 @@ button:active {
     color: var(--light-gray);
 }
 
+.sr-only {
+    position: absolute;
+    left: -9999px;
+}
+
 
 @media (min-width: 1000px) {
     body {
@@ -104,7 +109,10 @@ button:active {
     }
     main {
         grid-template-columns: repeat(3, 1fr);
-        width: 70%;
+        width: 65%;
+    }
+    button {
+        margin-top: 10vh;
     }
     section:first-of-type {
         border-radius: 10px 0 0 10px;
